# SO1_S2_2024

./: .gitignore  README.md
contenido/unidad_1/: bash_scripts.md  contenedores.md  index.md  modulos.md  procesos_concurrencia.md  rust.md
contenido/unidad_1/ejemplos/: .gitignore
contenido/unidad_1/ejemplos/modulo/: sysinfo.c
contenido/unidad_1/ejemplos/python_service/logs/: logs.json
contenido/unidad_1/ejemplos/rust_service/: Cargo.toml
contenido/unidad_1/ejemplos/rust_service/src/: main.rs
contenido/unidad_2/: index.md
contenido/unidad_2/ejemplos/: build-images.sh  gcp.md
contenido/unidad_2/ejemplos/gRPC/golang-client/: main.go
contenido/unidad_2/ejemplos/gRPC/golang-example/: doc.md  main.go
contenido/unidad_2/ejemplos/gRPC/golang-example/proto/: client.pb.go  client.proto  client_grpc.pb.go
contenido/unidad_2/ejemplos/gRPC/grpc-client/: Cargo.toml
contenido/unidad_2/ejemplos/gRPC/grpc-client/proto/: studentgrpc.proto
contenido/unidad_2/ejemplos/gRPC/grpc-client/src/: main.rs
contenido/unidad_2/ejemplos/kubernetes/: goclient.yaml  goserver.yaml  ingress.yaml  namespace.yaml  rustclient.yaml
